again font awesome because windows utf 8 not understand

--- a/src/main/resources/templates/eh1_index1.html
+++ b/src/main/resources/templates/eh1_index1.html
@@ -9,6 +9,7 @@
 	<script th:attr="src=${script}"></script>
 	<link rel="stylesheet" href="/f/css/w3.css">
 	<link rel="stylesheet" href="/f/css/algoritmed.css">
+	<link rel="stylesheet" href="/webjars/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
