--- a/src/main/resources/templates/eh1_index1.html
+++ b/src/main/resources/templates/eh1_index1.html
@@ -2,6 +2,8 @@
 <html ng-app="app">
 <meta charset="utf-8" />
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="shortcut icon" href="/f/img/algoritmed.ico" />
 	<script src="/webjars/angularjs/1.6.9/angular.min.js"></script>
 	<script src="/webjars/angularjs/1.6.9/angular-sanitize.min.js"></script>
 	<script src="/f/algoritmed/compile-algoritmed2.js"></script>
