--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -13,24 +13,19 @@
 <script th:attr="src=${script}"></script>
 <link rel="stylesheet" href="/f/css/w3.css">
 <link rel="stylesheet"
-	href="/webjars/font-awesome/4.7.0/css/font-awesome.min.css">
+  href="/webjars/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class="w3-container"
-style="max-width: 950px; margin-left: 10px;"
 ng-controller="ControllerApp1"
 >
-	<h1>Медична інформаційна система ALGORITMED</h1>
-	<div>
-		<a href="/v/info"> Інформаційна сторінка </a>
-	</div>
-	<p>
-		Login <span ng-include="'/f/algoritmed/lib/link-to-login.html'"></span>
-	</p>
-	{{page.getPrincipalRole().name}}
-	<div 
-	ng-if="page.getPrincipalRole()"
-	ng-include="'/f/algoritmed/lib/page.head.tabs.html'"></div>
-
+  <h1>Медична інформаційна система ALGORITMED</h1>
+  <div>
+    <a href="/v/info"> Інформаційна сторінка </a>
+  </div>
+  <p>
+    Login <span ng-include="'/f/algoritmed/lib/link-to-login.html'"></span>
+  </p>
+  {{page.getRoleName()}}
 </body>
 </html>
