--- a/src/main/resources/templates/eh1_index1.html
+++ b/src/main/resources/templates/eh1_index1.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="shortcut icon" href="/f/img/algoritmed.ico" />
 	<script src="/webjars/angularjs/1.6.9/angular.min.js"></script>
+	 <script src="/webjars/angularjs/1.6.9/i18n/angular-locale_uk.js"></script>
 	<script src="/webjars/angularjs/1.6.9/angular-sanitize.min.js"></script>
 	<script src="/f/algoritmed/compile-algoritmed2.js"></script>
 	<script src="/f/algoritmed/app_config2.js"></script>
