registry employeer with email

--- a/src/main/resources/static/f/css/algoritmed.css
+++ b/src/main/resources/static/f/css/algoritmed.css
@@ -2,6 +2,9 @@ pre {
   tab-size: 2; /* Set tab size to 2 spaces */
   -moz-tab-size:2;
 }
+.am-width-100pr{
+  width: 100%;
+}
 table.am-table-va th{
   vertical-align: bottom;	
 }
