--- a/src/main/resources/static/f/css/algoritmed.css
+++ b/src/main/resources/static/f/css/algoritmed.css
@@ -13,6 +13,9 @@ table.am-table-va th{
 }
 table.am-table-va td{
   vertical-align: top;
+ }
+.am-nowrap{
+	white-space: nowrap;
 }
 .am-b{
 	font-weight:bold;
