--- a/src/main/resources/static/f/css/algoritmed.css
+++ b/src/main/resources/static/f/css/algoritmed.css
@@ -1,3 +1,12 @@
+@media print {
+  a[href]:after {
+    content: none;
+  }
+  .no-print, .no-print * {
+    display: none !important;
+  }
+}
+
 pre {
   tab-size: 2; /* Set tab size to 2 spaces */
   -moz-tab-size:2;
