--- a/src/main/resources/templates/template3.html
+++ b/src/main/resources/templates/template3.html
@@ -6,6 +6,7 @@
 <title th:text="${title}"></title>
 <link rel="shortcut icon" href="/f/img/algoritmed.ico" />
 <script src="/webjars/angularjs/1.7.0/angular.min.js"></script>
+<script src="/webjars/angularjs/1.7.0/angular-route.js"></script>
 <script src="/webjars/angularjs/1.7.0/i18n/angular-locale_uk.js"></script>
 <script src="/webjars/angularjs/1.7.0/angular-sanitize.min.js"></script>
 <script src="/f/algoritmed/compile-algoritmed3.js"></script>
