--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -4,7 +4,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title th:text="${title}"></title>
-<link rel="shortcut icon" href="/f/img/algoritmed.ico" />
+<link rel="shortcut icon" href="/f/img/algoritmed.ico" type="image/x-icon"/>
 <script src="/webjars/angularjs/1.7.2/angular.min.js"></script>
 <script src="/webjars/angularjs/1.7.2/i18n/angular-locale_uk.js"></script>
 <script src="/webjars/angularjs/1.7.2/angular-sanitize.min.js"></script>
@@ -14,7 +14,6 @@
 <link rel="stylesheet" href="/f/css/algoritmed.css">
 <link rel="stylesheet"
 	href="/webjars/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="icon" href="/f/img/ehalthinua-falicon.ico" type="image/x-icon">
 </head>
 
 <body class="w3-container" ng-controller="ControllerApp1">
