settings + set employee role

--- a/src/main/resources/templates/template5.html
+++ b/src/main/resources/templates/template5.html
@@ -20,8 +20,8 @@
 	href="/webjars/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body class="w3-container" ng-controller="ControllerApp1">
-	<div class="w3-container w3-border-bottom">
+<body class="w3-container w3-light-gray" ng-controller="ControllerApp1">
+	<div class="w13-container w3-white w3-border-bottom">
 		<div th:attr="ng-include=${ng_template}"></div>
 		<span class="w3-tiny"> > 
 		<span ng-include="include.copyright"></span>
