--- a/src/main/resources/static/f/css/am.css
+++ b/src/main/resources/static/f/css/am.css
@@ -1,3 +1,4 @@
 .am-b{ font-weight:bold; }
+.am-i{ font-style: italic; }
 .am-p-margin p{margin-top: 6px; margin-bottom: 6px;}
 .am-width-100pr{ width: 100%; }
